[project]
name = "vnccs-utils"
description = "VNCCS - Collection of utility nodes. VNCCS Visual Camera Control for Qwen-Image-Edit-2511-Multiple-Angles LoRa. VNCCS QWEN Detailer - For spot corrections in images of any size. "
version = "0.3.0"
license = {file = "LICENSE"} 

dependencies = ["opencv-python", "color-matcher", "huggingface_hub", "aiohttp"]

[project.urls]
Repository = "https://github.com/AHEKOT/ComfyUI_VNCCS_Utils"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/AHEKOT/ComfyUI_VNCCS/wiki"
"Bug Tracker" = "https://github.com/AHEKOT/ComfyUI_VNCCS/issues"

[tool.comfy]
PublisherId = "vnccs"
DisplayName = "VNCCS - Collection of utility nodes"
Icon = "https://raw.githubusercontent.com/AHEKOT/ComfyUI_VNCCS/refs/heads/main/images/VNCCS_LOGO.png"

